Fix tip section layout on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -271,7 +271,8 @@ body {
 }
 
 .tip-amount-input {
-  width: 5rem;
+  text-align: center;
+  width: 3rem;
 }
 
 .trans-number {
@@ -300,6 +301,12 @@ body {
   }
 }
 
+@media screen and (min-width: 576px) {
+  .tip-amount-input {
+    width: 3.5rem;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .content-wrapper {
     max-width: 75%;
@@ -311,6 +318,10 @@ body {
 
   .faq-item-answer li {
     font-size: 1rem;
+  }
+
+  .tip-amount-input {
+    width: 4rem;
   }
 }
 
